@@ -37,5 +37,5 @@
       } ]
     } ]
   } ],
-  version: "kiji-1.0"
+  version: "layout-1.0"
 }
