@@ -57,5 +57,5 @@
       } ]
     } ]
   } ],
-  version : "kiji-1.1"
+  version : "layout-1.1"
 }
