@@ -82,5 +82,5 @@
       }
     } ]
   } ],
-  version : "kiji-1.0"
+  version : "layout-1.0"
 }
